# vanikeys

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_DECISION.md  DEPLOYMENT_STATUS.md  QUICKSTART.md  README.md  benchmark.py  claude.md  pyproject.toml  requirements.txt
database/: schema.sql
deployment/: Dockerfile  Dockerfile.slim  RUNPOD_DEPLOYMENT_CHECKLIST.md  deploy-runpod.sh  runpod_handler.py  test_runpod.py
docs/: ARCHITECTURE.md  CHANGELIST.md  COMPUTE_OPTIONS_COMPARISON.md  CUSTOMER_QUICKSTART.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_PLAN.md  DIGITALOCEAN_GPU_DEPLOYMENT.md  GAMIFICATION_DESIGN.md  HD_DERIVATION_IMPLEMENTATION.md  LLM_INTEGRATION_GUIDE.md  ORGANIZATIONAL_KEY_MANAGEMENT.md  PATTERN_MARKETPLACE_DESIGN.md  PHASE2_IMPLEMENTATION_PLAN.md  SERVERLESS_GPU_OPTIONS.md  VANIKEYS_DIRECTORY_SERVICE.md  ZERO_KNOWLEDGE_PROTOCOL.md
examples/: basic_usage.py
src/vanikeys/: __init__.py
src/vanikeys/cli/: __init__.py  api_client.py  main.py  storage.py
src/vanikeys/cli/commands/: __init__.py  derive.py  init.py  order.py  verify.py
src/vanikeys/core/: __init__.py  difficulty.py  engine.py  probability.py  types.py
src/vanikeys/crypto/: __init__.py  derivation.py  fingerprint.py  matching.py  proofs.py  validation.py
src/vanikeys/domain/: __init__.py  key.py  pattern.py  pull.py  token.py
src/vanikeys/generators/: __init__.py  base.py  ed25519.py
src/vanikeys/matchers/: __init__.py  base.py  multi_substring.py  simple.py
src/vanikeys/services/: __init__.py  pull_service.py  token_service.py
tests/: test_cli_integration.py  test_cli_storage.py  test_crypto_derivation.py  test_crypto_fingerprint.py  test_crypto_matching.py  test_crypto_proofs.py  test_crypto_validation.py  test_domain_key.py  test_domain_pattern.py  test_multi_substring_matcher.py  test_probability_calculator.py
