[project]
name = "vanikeys"
version = "0.2.0"
description = "VaniKeys - Zero-knowledge vanity SSH key generation. Your private keys never leave your machine."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Scott Senger", email = "scottsen@tia.net"}
]
dependencies = [
    "click>=8.1.0",
    "cryptography>=41.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.scripts]
vanikeys = "vanikeys.cli:main"

[project.optional-dependencies]
server = [
    "fastapi>=0.104.0",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.0",
    "stripe>=7.0.0",
    "structlog>=23.0.0",
    "uvicorn>=0.24.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "reveal-cli>=0.13.0",
]
gpu = [
    "cupy>=12.0.0",  # GPU acceleration
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
extend-select = ["I"]  # import sorting

[tool.ruff.lint]
select = ["E", "F", "I"]  # pycodestyle, pyflakes, isort

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, tighten later

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "src/vanikeys/config/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
